# RetailAgentOpt

./: README.md  agents.py  app.py  db_utils.py  ecommerce_data.sqlite  ethical_ecom_scraper.py  main.py  requirements.txt  test_forecast_agent.py  test_pricing_agent.py
data/: data_setup.py  inventory.db
retailagentoptyaml/: README.md  pyproject.toml
retailagentoptyaml/src/retailagentoptyaml/: crew.py  main.py
static/css/: style.css
static/js/: script.js
templates/: index.html
